
<resources>
    <!-- Application Name -->

    <string name="app_name">Knowledge is Power</string>

    <!-- Intro page, Welcome message -->

    <string name="intro_text_hello">Hello there. KiP(Knowledge is Power) application welcomes you!</string>

    <!-- intro text -->

    <string name="intro_text">This is a quiz app, composed of 5 history questions. With this app you can:</string>

    <!-- intro, things that can be achievable -->

    <string name="intro_text_prop">1- Measure your history knowledge</string>
    <string name="item2">2- See your result</string>
    <string name="item3">3- Send your result to yourself</string>
    <string name="item4">4- Share your result with your friends</string>
    <string name="item5">5- Save your results to your device</string>




    <!-- intro, end message -->

    <string name="intro_end_note">P.S.: This application is made by Levent Alahan Tekinalp. On the purpose of showing the Udacity mentors that he is trying his best to prove Google\'s scholarship is not being wasted. :) </string>

    <!-- Language selection first page -->

    <!-- intro understand the text -->

    <string name="understood">I understood the text and ready to proceed further.</string>

    <!-- submit page edittext hintname-->

    <string name="hintname">Enter Your Name</string>
    <string name="saved">Your information is saved</string>
    <string name="save">SAVE</string>

    <!-- submit page edittext e-mail -->

    <string name="email">enter@youre-mail.com</string>

    <!-- submit page submit button-->

    <string name="submit">SUBMIT</string>

    <!-- submit page submit name-->

    <string name="namesubmit">Name: </string>

    <!-- submit page submit name-->

    <string name="emailsubmit">E-mail: </string>

    <!-- introduction continue button-->

    <string name="cont">CONTINUE</string>

    <!-- submit page go back text view-->

    <string name="goback">GO TO THE LANGUAGE SCREEN</string>

    <!-- language select page string toast -->

    <string name="language_toast">You chose English language</string>

    <!-- quizpage1 question1 & answers string -->

    <string name="quest1">1- What is the name and who is the composer of the song that you have listened on start of the application?</string>
    <string name="an11">Peer Gynt - Grieg</string>
    <string name="an12">Grünberg - Heinrich IX</string>
    <string name="an13">Greensleeves - Henry VIII</string>
    <string name="an14">Greensleeves - Yasunori Mitsuda</string>
    <string name="an15">Non</string>

    <!-- quizpage2 question2 string -->

    <string name="quest2">2- Which dynasty ruled Russia just before the Bolshevik Revolution?</string>
    <string name="an21">Godunov</string>
    <string name="an22">Romanov</string>
    <string name="an23">Rurikids</string>
    <string name="an24">Vasa</string>
    <string name="an25">Medvedev</string>

    <!-- quizpage3 question3 string -->

    <string name="quest3">3- Which religion did "Zheng He", amiral of the great expedition to Africa, followed?</string>
    <string name="an31">Buddhism</string>
    <string name="an32">Taoism</string>
    <string name="an33">Judaism</string>
    <string name="an34">Christianity</string>
    <string name="an35">Islam</string>

    <!-- quizpage4 question4 string -->

    <string name="quest4">4- Which wall can or could be seen from the space?</string>
    <string name="an41">The Great Wall</string>
    <string name="an42">The Hadrian Wall</string>
    <string name="an43">Wallmart</string>
    <string name="an44">All</string>
    <string name="an45">Non</string>
    <!-- quizpage4 question5 string -->

    <string name="quest5">5- When did the first Crusade ended?</string>
    <string name="an51">1095</string>
    <string name="an52">1096</string>
    <string name="an53">1097</string>
    <string name="an54">1098</string>
    <string name="an55">1099</string>

    <!-- submit page error messages -->

    <string name="error_submit_name">Enter your name</string>
    <string name="error_submit_email">Enter your e-mail address</string>

    <!-- submit page dialog box to make em sure -->

    <string name="control">Did you type your Name:"" and E-mail address:"" correct? If so press Yes.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialogTitle">Attention!</string>

    <!-- question 1 message for continue -->
    <string name="answerMes">Once you press yes you will not be able to go back for this session. Are you sure of your answer?</string>

    <!-- result page codes -->

    <string name="answerTitle">Correct Answers</string>
    <string name="yourScore">Your Score:</string>
    <string name="yourAnswer">Your Answer is:</string>
    <string name="send1">Send Result</string>
    <string name="Correct">Correct :</string>
    <string name="False">False :</string>
    <string name="explain1">Henry VII loved entertainers, and the court attracted acrobats, jesters,
        magicians and musicians. Prince Henry enjoyed music and grew up to be an accomplished musician
        (although he did not write "Greensleeves," as legend suggests). At the age of 10 he could play
        many instruments, including the fife, harp, viola and drums.
        \n \n Source: \nhttp://www.tudorplace.com.ar/aboutHenryVIII.htm </string>
    <string name="explain2">The Romanov Dynasty also known as “The House of Romanov” was the second
        imperial dynasty (after the Rurik dynasty) to rule Russia. The Romanov family reigned from
        1613 until the abdication of Tsar Nicholas II on March 15, 1917, as a result of the Russian Revolution.
        \n \n Source: \nhttp://www.theromanovfamily.com/the-romanov-dynasty-a-history/</string>
    <string name="explain3">Among the tremendous events narrated by the ceremony was the evokation
        of Zheng He, the Chinese Muslim admiral of the 15th century. Blue-robed oarsman enacted
        seafarers travelling between Southeast Asia and the coast of Fujian, in southern China.
        Their oars became sails, painted with the "treasure ships" of Zheng He who reached Africa
        in the Ming Dynasty.  \n \n Source: \nhttp://www.muslimheritage.com/article/zheng-he-chinese-muslim-admiral</string>
    <string name="explain4">One popular myth about space exploration is that the Great Wall of China
        is the only human-built structure that can be seen from space. But this is not true.
        The reality is that you can’t easily see the Great Wall with the unaided eye, even from low
        Earth orbit. And certainly, the Apollo astronauts couldn’t see it from the Moon, even though
        that urban legend has been widely circulated.  \n \n Source: \nhttps://www.universetoday.com/25364/can-you-see-the-great-wall-of-china-from-space/</string>
    <string name="explain5">The crusaders first gathered in Constantinople in fall 1096. They besieged
        Nicaea while Kilij Arslan was away (the city surrendered to Alexius), and later defeated an
        army commanded by Kilij Arslan at Dorlyaeum. On their progress to Jerusalem the crusaders
        (or a faction of them) also seized Edessa (which became the first Latin settlement) and Antioch.
        After Antioch, the crusaders waited out the summer heat and disorder from Adhémar\'s death.
        Eventually, the rank and file soldiers forced the crusade to continue. After unsuccessfully
        besieging Arqah for three months, the crusaders continued to Jerusalem which they seized on
        July 15, 1099. The Christian armies defended their conquest in August 1099 by defeating an
        Egyptian relief army. Pope Urban II died on July 29, 1099, without hearing the news.\n \n Source: \n http://www.umich.edu/~marcons/Crusades/timeline/summaries/First_Crusade.htm</string>
    <string name="explain">EXPLANATION:</string>
    <string name="emailSubject">Knowledge is Power Application Quiz Result</string>
    <string name="durum">EMPTY</string>
    <string name="firstPage">GO HOME</string>
    <string name="date">Date and Time</string>
    <string name="share">SHARE</string>
    <string name="choose1">Choose What to Share:</string>
    <string name="shareAll">DEFAULT</string>
    <string name="correctOnes">Correct Ones</string>
    <string name="emailCheck">Email Address</string>
    <string name="scoreResult">Quiz Result</string>
    <string name="goBackMes">You are leaving for the language selection screen. Are you sure?</string>
    <string name="chooseDude">You need to choose at least one item to share.</string>
    <string name="OK">O.K.</string>


    <!--firstpage codes-->
    <string name="flag1">American Flag</string>
    <string name="flag2">Turkish Flag</string>
    <string name="upset">Confused dude</string>
    <!--SPLASH codes-->

    <string name="alphaK">Letter K</string>
    <string name="letterI">Letter I</string>
    <string name="endP">Letter P</string>

</resources>
