<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">



    <TextView
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/namesubmit"
        android:layout_marginLeft="2dp"/>



    <EditText
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:hint="@string/hintname"
        android:textSize="18sp"
        android:id="@+id/editname"
        />

    <TextView
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/emailsubmit"
        android:layout_marginLeft="2dp"/>

    <EditText
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_posta"
        android:hint="@string/email"
        android:textSize="18sp"
        android:inputType="textPostalAddress"
        />
<RelativeLayout
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/submit"
        android:onClick="submit"
        android:layout_alignParentStart="true"
     />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/save"
        android:onClick="saveInfo"
        android:layout_alignParentEnd="true"
      />
</RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goback"
        android:layout_marginTop="20dp"
        android:onClick="goback"
        />



</LinearLayout>

    </ScrollView>