<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/paper"
    android:padding="50dp"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <!-- questions and answers with strings -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/quest4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:fontFamily="@font/medievalsharp"
            android:textStyle="bold"

            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/an41"
            android:onClick="a41"
            android:textStyle="bold"

            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/an42"
            android:onClick="a42"
            android:textStyle="bold"

            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/an43"
            android:onClick="a43"
            android:textStyle="bold"

            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/an44"
            android:onClick="a44"
            android:textStyle="bold"

            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/an45"
            android:onClick="a45"
            android:textStyle="bold"

            />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont"
            android:id="@+id/q4cont"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="q4cont"
            android:fontFamily="@font/medievalsharp"
            android:textStyle="bold"
            />

    </LinearLayout>



</ScrollView>